...
  <string name="add_profile_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="add_profile_info_content_description">More information on 3-digit PINs.</string>
  <string name="required_fields_content_description">Fields marked with an * are required.</string>
  <string name="current_profile_picture_content_description">Current profile picture</string>
  <string name="edit_profile_picture_content_description">Edit profile picture</string>
  <!-- OnboardingActivity -->
  <string name="onboarding_slide_0_title">Welcome to Oppia!</string>
  <string name="onboarding_slide_0_description">Learn anything you want in an effective and enjoyable way.</string>
  <string name="onboarding_slide_1_title">Add users to your account.</string>
  <string name="onboarding_slide_1_description">Share the experience and create up to 10 profiles.</string>
  <string name="onboarding_slide_2_title">Download for offline.</string>
  <string name="onboarding_slide_2_description">Continue learning your lessons without internet connection.</string>
  <string name="onboarding_slide_3_title">Have fun!</string>
  <string name="onboarding_slide_3_description">Enjoy your learning adventures with our free, effective lessons.</string>
  <string name="skip">Skip</string>
  <string name="get_started">Get Started</string>
  <!-- PinPasswordActivity -->
  <string name="pin_password_hello">Hi, %s!</string>
  <string name="pin_password_admin_enter">Please enter your Administrator PIN.</string>
  <string name="pin_password_user_enter">Please enter your PIN.</string>
...
