...
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oppiaBackgroundYellowIvory">

    <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/onboarding_slide_view_pager"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:overScrollMode="never"
      android:scrollbars="none"
      app:layout_constraintBottom_toTopOf="@id/get_started_container"
      app:layout_constraintEnd_toEndOf="parent"
...
        android:src="@drawable/ic_arrow_forward_black_24dp"
        android:visibility="@{viewModel.slideNumber != 3 ? View.VISIBLE: View.GONE, default=visible}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slide_dots_container" />

      <TextView
        android:id="@+id/skip_text_view"
        style="@style/Caption"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="@{(v) -> presenter.clickOnSkip()}"
...
